# unity-api

./: .bzrignore  CMakeLists.txt  CTestCustom.cmake.in  INSTALL  README  astyle-config  unity-api.qmlproject  valgrind-suppress
data/: CMakeLists.txt  libunity-api.pc.in  unity-shell-api.pc.in
include/unity/api/: CMakeLists.txt  Version.h.cmake  Version.h.in
include/unity/shell/: CMakeLists.txt
include/unity/shell/application/: ApplicationInfoInterface.h  ApplicationInstanceInterface.h  ApplicationInstanceListInterface.h  ApplicationListModelInterface.h  ApplicationManagerInterface.h  CMakeLists.txt  Globals.h  Mir.h  MirFocusControllerInterface.h  MirMousePointerInterface.h  MirPlatformCursor.h  MirSurfaceInterface.h  MirSurfaceItemInterface.h  MirSurfaceListInterface.h  SurfaceInterface.h  SurfaceItemInterface.h  SurfaceManagerInterface.h  TopLevelWindowModelInterface.h  WindowInterface.h  WindowListInterface.h
include/unity/shell/launcher/: AppDrawerModelInterface.h  CMakeLists.txt  LauncherItemInterface.h  LauncherModelInterface.h  QuickListModelInterface.h  applicationlistmodel.h  launcherinterface.h  quicklistmodelinterface.h
include/unity/shell/notifications/: CMakeLists.txt  Enums.h  ModelInterface.h  NotificationInterface.h  SourceInterface.h  enums.h  model.h  notification.h  source.h
include/unity/shell/scopes/: CMakeLists.txt  CategoriesInterface.h  DepartmentInterface.h  ExpandableFilterWidgetInterface.h  FilterBaseInterface.h  FiltersInterface.h  NavigationInterface.h  OptionSelectorFilterInterface.h  OptionSelectorOptionsInterface.h  PreviewModelInterface.h  PreviewStackInterface.h  PreviewWidgetModelInterface.h  RangeInputFilterInterface.h  ResultsModelInterface.h  ScopeInterface.h  ScopesInterface.h  SettingsModelInterface.h  ValueSliderFilterInterface.h  ValueSliderValuesInterface.h
src/: CMakeLists.txt  libunity-api.pc.in
src/modules/TestUtil/: CMakeLists.txt  TestUtil.cpp  testutil.cpp  testutil_plugin.cpp
src/pch/: unityapi_pch.hh
src/unity/: CMakeLists.txt  Exception.cpp  ExceptionImplBase.cpp  UnityExceptions.cpp
src/unity/api/: CMakeLists.txt  UnityExceptions.cpp  Version.cpp
src/unity/api/internal/: CMakeLists.txt
src/unity/api/scopes/: CMakeLists.txt  Version.cpp
src/unity/api/scopes/internal/: CMakeLists.txt
src/unity/internal/: CMakeLists.txt  ExceptionImpl.cpp  UnityExceptionsImpl.cpp
src/unity/util/: CMakeLists.txt  Daemon.cpp  FileIO.cpp  IniParser.cpp  Logger.cpp  SnapPath.cpp
src/unity/util/internal/: CMakeLists.txt  DaemonImpl.cpp
test/: CMakeLists.txt  unity-api-test-config.h.in
test/cleanincludes/: CMakeLists.txt  includechecker.py
test/copyright/: CMakeLists.txt  check_copyright.sh
test/data/: sample.ini
test/gcov/: expected  gcov.py
test/gtest/: CMakeLists.txt
test/gtest/libgtest/: CMakeLists.txt
test/gtest/unity/: CMakeLists.txt  Exceptions_test.cpp
test/gtest/unity/api/: CMakeLists.txt
test/gtest/unity/api/Version/: CMakeLists.txt  Version_test.cpp
test/gtest/unity/scopes/: CMakeLists.txt
test/gtest/unity/scopes/Version/: CMakeLists.txt  Version_test.cpp
test/gtest/unity/util/: CMakeLists.txt
test/gtest/unity/util/Daemon/: CMakeLists.txt  Daemon_test.cpp  daemon-tester.py
test/gtest/unity/util/DefinesPtrs/: CMakeLists.txt  DefinesPtrs_test.cpp
test/gtest/unity/util/FileIO/: CMakeLists.txt  FileIO_test.cpp
test/gtest/unity/util/GObjectMemory/: CMakeLists.txt  GObjectMemoryMakeShared_test.cpp  GObjectMemory_test.cpp
test/gtest/unity/util/GioMemory/: CMakeLists.txt  GioMemory_test.cpp
test/gtest/unity/util/GlibMemory/: CMakeLists.txt  GlibMemory_test.cpp
test/gtest/unity/util/IniParser/: CMakeLists.txt  IniParser_test.cpp
test/gtest/unity/util/Logger/: CMakeLists.txt  Logger_test.cpp
test/gtest/unity/util/ResourcePtr/: CMakeLists.txt  ResourcePtr_test.cpp
test/gtest/unity/util/SnapPath/: CMakeLists.txt  SnapPath_test.cpp
test/gtest/unity/util/internal/: CMakeLists.txt
test/gtest/unity/util/internal/ResourcePtr/: CMakeLists.txt  ResourcePtr_test.cpp
test/headers/: CMakeLists.txt  check_public_headers.py  compile_headers.py  includechecker.py
test/mocks/plugins/Unity/Notifications/: CMakeLists.txt  TestNotificationsPlugin.cpp  qmldir  testnotificationsplugin.cpp
test/mocks/plugins/Unity/Notifications/Mocks/: CMakeLists.txt  MockActionModel.cpp  MockModel.h  MockNotification.cpp  MockNotification.h  MockNotificationsPlugin.cpp  MockNotificationsPlugin.h  mockactionmodel.cpp  mockactionmodel.h  mockmodel.cpp  mockmodel.h  mocknotification.cpp  mocknotification.h  mocknotificationsplugin.cpp  mocksource.cpp  mocksource.h  qmldir
test/qmltest/: CMakeLists.txt
test/qmltest/mocks/: CMakeLists.txt
test/qmltest/mocks/plugins/Ubuntu/Application/: CMakeLists.txt  TestApplicationPlugin.cpp  qmldir
test/qmltest/mocks/plugins/Unity/Application/: CMakeLists.txt  TestApplicationPlugin.cpp  TestApplicationPlugin.h  qmldir
test/qmltest/mocks/plugins/Unity/Launcher/: CMakeLists.txt  TestLauncherPlugin.cpp  TestLauncherPlugin.h  qmldir
test/qmltest/mocks/plugins/Unity/Notifications/: CMakeLists.txt  TestNotificationsPlugin.cpp  TestNotificationsPlugin.h  qmldir
test/qmltest/mocks/plugins/Unity/Scopes/: CMakeLists.txt  TestScopesPlugin.cpp  qmldir  (+1 more)
test/qmltest/modules/TestUtil/: CMakeLists.txt  TestUtil.cpp  TestUtil.h  TestUtilPlugin.cpp  TestUtilPlugin.h  Verifier.qml
test/qmltest/modules/TestUtil/test/: MockObjectForInstanceOfTest.qml  MockObjectForInstanceOfTestChild.qml  tst_TestUtil.qml
test/qmltest/unity/shell/: CMakeLists.txt
test/qmltest/unity/shell/application/: tst_Application.qml  tst_Surface.qml
test/qmltest/unity/shell/launcher/: tst_Launcher.qml
test/qmltest/unity/shell/notifications/: tst_Notifications.qml
test/qmltest/unity/shell/scopes/: tst_Scopes.qml
test/unity/shell/: CMakeLists.txt
test/unity/shell/notifications/: tst_Notifications.qml
test/util/modules/: CMakeLists.txt
test/util/modules/TestUtil/: TestUtil.h  TestUtilPlugin.cpp  Verifier.qml  qmldir
test/whitespace/: CMakeLists.txt  check_whitespace.py  check_whitespace.sh
(+97 files in other folders)
