add_subdirectory(unity)

set(UNITY_API_SOVERSION 0)

add_library(${UNITY_API_LIB} SHARED ${UNITY_API_LIB_SRC})
set_target_properties(${UNITY_API_LIB} PROPERTIES
    VERSION "${UNITY_API_MAJOR}.${UNITY_API_MINOR}"
    SOVERSION ${UNITY_API_SOVERSION}
)
add_pch(pch/unityapi_pch.hh ${UNITY_API_LIB})

install(TARGETS ${UNITY_API_LIB} LIBRARY DESTINATION ${LIB_INSTALL_PREFIX})

configure_file(lib${UNITY_API_LIB}.pc.in lib${UNITY_API_LIB}.pc @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${UNITY_API_LIB}.pc DESTINATION ${LIB_INSTALL_PREFIX}/pkgconfig)

set(UNITY_API_LIB_SRC ${UNITY_API_LIB_SRC} ${UNITY_SRC} PARENT_SCOPE)
